--- a/practical_day1-beginner.Rmd
+++ b/practical_day1-beginner.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "Practical - beginner"
-#knit: unilur::knit
+knit: unilur::knit
 author: "Aurelien Ginolhac"
 date: "2^nd^ June 2016"
 output:
-  #unilur::tutorial:
-  unilur::tutorial_html:
-    solution: no
-    theme: cosmo
+  unilur::tutorial:
+    solution: wwo
+
 ---
 
 
