add credit to html

--- a/practical_day1-beginner.Rmd
+++ b/practical_day1-beginner.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "Practical - beginner"
-knit: unilur::knit
+#knit: unilur::knit
 author: "Aurelien Ginolhac"
 date: "2^nd^ June 2016"
 output:
-  unilur::tutorial:
+  unilur::tutorial_html:
     solution: no
+    theme: cosmo
     credit: yes
 ---
 
