--- a/lecture_day1-intermediate.Rmd
+++ b/lecture_day1-intermediate.Rmd
@@ -488,9 +488,9 @@ purr_df <- map_df(files, read_excel, .id = "file_number")
 ```
 filenames are better
 ```{r}
-
+library("stringr")
 files %>%
-  set_names(nm = basename(.) %>% sub("([^.]+)\\.[[:alnum:]]+$", "\\1", .)) %>%
+  set_names(nm = str_match(basename(.), "([^.]+)\\.[[:alnum:]]+$")[,2]) %>%
   map_df(read_excel, .id = "file_name") -> purr_name_df
 ```
 
