bigger bullet but square

--- a/lecture_day1-beginner.Rmd
+++ b/lecture_day1-beginner.Rmd
@@ -9,7 +9,7 @@ output:
     smaller: yes
     fig_width: 6
     fig_height: 5
-    keep_md: true
+    keep_md: false
 ---
 
 ```{r setup, include=FALSE}
